chore: :rotating_light: 린터 설정 다시함

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,17 +1,15 @@
 {
   "extends": [
     "airbnb",
+    "plugin:import/errors",
+    "plugin:import/warnings",
     "airbnb/hooks",
     "react-app",
     "prettier",
     "plugin:react/recommended",
+    "plugin:react/jsx-runtime",
     "plugin:prettier/recommended"
   ],
-  "env": {
-    "browser": true,
-    "jasmine": true,
-    "jest": true
-  },
   "settings": {
     "import/extensions": [".js", ".jsx", ".ts", ".tsx"],
     "import/resolver": {
@@ -25,72 +23,30 @@
     }
   },
   "rules": {
-    "arrow-body-style": "off",
-    "semi": ["warn", "always"],
-    "react/function-component-definition": [
-      "warn",
-      { "namedComponents": "arrow-function" }
-    ],
-    "react/jsx-one-expression-per-line": "off",
-    "react/jsx-filename-extension": [
-      "error",
-      { "extensions": [".js", ".jsx", ".ts", ".tsx"] }
-    ],
-    "react/jsx-indent": "warn",
-    "react/jsx-props-no-spreading": "off",
-    "react/no-array-index-key": "warn",
-    "react/require-default-props": "off",
-    "react/jsx-wrap-multilines": "off",
-    "react/jsx-uses-react": "off",
-    "react/react-in-jsx-scope": "off",
+    "@typescript-eslint/no-shadow": "off",
+    "@typescript-eslint/no-explicit-any": "error",
+    "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/no-use-before-define": "off",
     "import/prefer-default-export": "off",
+    "prettier/prettier": "off",
+    "jsx-a11y/no-noninteractive-element-interactions": "off",
+    "jsx-a11y/label-has-associated-control": "off",
+    "import/extensions": "off",
     "import/no-unresolved": "off",
-    "import/order": "off",
-    "import/no-anonymous-default-export": "off",
-    "import/no-extraneous-dependencies": [
-      "error",
-      {
-        "devDependencies": [".storybook/**", "src/stories/**"]
-      }
-    ],
-    // "max-lines": ["warn", 150],
-    "no-param-reassign": ["error", { "props": false }],
-    "no-use-before-define": "off",
-    "@typescript-eslint/no-use-before-define": ["error"],
-
-    "no-shadow": "off",
-    "no-unused-expressions": ["warn"],
-    "@typescript-eslint/no-shadow": ["error"],
-    "@typescript-eslint/naming-convention": "off",
-    "@typescript-eslint/unbound-method": "off",
-    "@typescript-eslint/no-non-null-assertion": "off",
-    "@typescript-eslint/no-unsafe-member-access": "off",
-    "@typescript-eslint/no-unsafe-assignment": "off",
-    "@typescript-eslint/no-unused-vars": [
-      "warn",
-      { "argsIgnorePattern": "^_" }
-    ],
-    "prefer-const": ["warn"],
-    "prefer-destructuring": ["error", { "object": true, "array": false }],
+    "import/no-extraneous-dependencies": "off", // 테스트 또는 개발환경을 구성하는 파일에서는 devDependency 사용을 허용
+    "react/prop-types": "off",
+    "react/jsx-filename-extension": ["error", { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
+    "react/function-component-definition": ["warn", { "namedComponents": "arrow-function" }],
+    "react/react-in-jsx-scope": "off",
+    "react/no-array-index-key": "off",
+    "react/jsx-no-bind": "off",
+    "react-hooks/exhaustive-deps": "off",
+    "no-alert": "off",
+    "func-names": "off",
     "lines-between-class-members": "off",
-    "jsx-a11y/click-events-have-key-events": "off",
-    "jsx-a11y/label-has-associated-control": [
-      "error",
-      {
-        "labelComponents": ["label"],
-        "labelAttributes": ["htmlFor"],
-        "controlComponents": ["input"]
-      }
-    ],
-    "import/extensions": [
-      "error",
-      "ignorePackages",
-      {
-        "js": "never",
-        "jsx": "never",
-        "ts": "never",
-        "tsx": "never"
-      }
-    ]
+    "linebreak-style": "off",
+    "no-useless-return": "off",
+    "prefer-template": "warn",
+    "react/require-default-props": "off"
   }
 }
