--- a/package.json
+++ b/package.json
@@ -28,10 +28,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "axios": "^0.27.2",
+    "axios": "^1.3.4",
     "classnames": "^2.3.1",
     "dayjs": "^1.11.3",
     "react": "^18.2.0",
@@ -44,10 +41,14 @@
     "react-scripts": "5.0.1",
     "react-use": "^17.4.0",
     "sass": "^1.52.3",
-    "store": "^2.0.12",
-    "web-vitals": "^2.1.0"
+    "store": "^2.0.12"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/plugin-syntax-flow": "^7.18.6",
+    "@babel/plugin-transform-react-jsx": "^7.20.13",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "@types/store": "^2.0.2",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
@@ -61,9 +62,9 @@
     "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.7.1",
-    "stylelint": "^14.9.1",
-    "stylelint-config-recess-order": "^3.0.0",
-    "stylelint-config-standard-scss": "^4.0.0",
+    "stylelint": "^15.2.0",
+    "stylelint-config-recess-order": "^4.0.0",
+    "stylelint-config-standard-scss": "^7.0.1",
     "stylelint-declaration-strict-value": "^1.8.0",
     "typescript": "^4.7.4"
   }
